@@ -1,3 +1,8 @@
+2006-05-12  David Reveman  <davidr@novell.com>
+
+	* src/window.c (moveResizeWindow): Handle west and north gravity
+	correctly.
+
 2006-05-11  David Reveman  <davidr@novell.com>
 
 	* src/display.c (addDisplay):
